fix: refactor function to finally resolve visual display bug by CSS stacking Bulma defaults for buttons hovers. All overlays should use z-index >4 to avoid Bulma z-index range

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -30,7 +30,7 @@
    display: flex;
    align-items: center;
    justify-content: center;
-   z-index: 2;
+   z-index: 5; /* Bulma button hover is 4 */
  }
  
  @keyframes spin {
